@startuml
'https://plantuml.com/class-diagram

class DAOpatternDemo
{
}

interface DAO
{
  +createRecord(String userid , int score ): Record
    +updateRecord(Record record): void
    +getRecordsByHashcode(int hashcode): Record
    +deleteRecordbyHashcode(int hashcode):void
    +sort(String by):void
}

class RankList implements DAO
{
-ranklist:List<Record>
+RankList()
- DataPath:String
- comparatorbyscore:Comparator<Record>
- comparatorbytime:Comparator<Record>
- comparatorbyid:Comparator<Record>
- comparatorbyrank:Comparator<Record>

+createRecord():Record
+updateRecord(Record record):void
+getRecordsByHashcode(int hashcode): Record
+deleteRecordbyHashcode(int hashcode):void
+sort(String by):void
+getRankList():void
-loadRecord():void
-writeRecord():void
-parseRecord():Record
}

class Record
{
    -rank:int
    - userid:String
    - score:int
    -time:LocalDateTime
    -hashcode:int
    -Record()
    +getRank(): int
    +setRank(rank: int): void
    +getId(): String
    +getScore(): int
    +setScore(score: int): void
    +getTime(): LocalDateTime
    +getHashcode():int
}
DAO<.. DAOpatternDemo
 Record<-- RankList
@enduml